--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,1 @@
-include etherscan/configs/MAIN-stable.json
-include etherscan/configs/GOERLI-stable.json
-include etherscan/configs/KOVAN-stable.json
-include etherscan/configs/RINKEBY-stable.json
-include etherscan/configs/ROPSTEN-stable.json
+include etherscan/config.json
